src/objects/ints__EfxReport_ForeignInquiry__c.object
<CustomObject>
    <fields>
        <fullName>ints__CityNameOrInquiryNumber__c</fullName>
        <label>CityNameOrInquiryNumber</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport  ForeignInquiries</relationshipLabel>
        <relationshipName>EfxReport_ForeignInquiries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__InquiryProvince__c</fullName>
        <label>InquiryProvince</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__date__c</fullName>
        <label>date</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport ForeignInquiry</label>
    <nameField>
        <displayFormat>EFX-F-INQUIRY-{0000000000}</displayFormat>
        <label>EfxReport ForeignInquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport  ForeignInquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>